--- a/templates/index.html
+++ b/templates/index.html
@@ -1,35 +1,11 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Iris Predictor</title>
-
-    </head>
-
-    <body>
-        <h1>IRIS PREDICTOR APP {deploy_test}</h1>
-        <p>I made this so I could learn how to deploy Machine Learning Models</p>
-    </body>
-</html> -->
-
-
-<html>
-    <head>
-        <link rel="stylesheet" href="{{ url_for('static', path='/styles.css') }}">
-        <title>House Number {{ id }}</title>
-    </head>
-
-    <body>
-        <h1>House Number: {{ id }}</h1>
-
-
-        <form action="" method="post">
-            <label for="input">Name</label>
-            <br>
-            <input type="text">
-        </form>
-
-        <p> The number is {{ id }}</p>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Iris Prophet</title>
+</head>
+<body>
+    <h1>IRIS PROPHET</h1>
+</body>
 </html>
