--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,22 @@
 </head>
 <body>
     <h1>IRIS PROPHET</h1>
+    <form action="/predict", method="post">
+        <label for="sepal_length">Sepal Length(cm)</label>
+        <input type="text", id="sepal_length", name="sepal_length">
+        <br>
+        <label for="sepal_width">Sepal Width(cm)</label>
+        <input type="text", id="sepal_width", name="sepal_width">
+        <br>
+        <label for="petal_length">Petal Length(cm)</label>
+        <input type="text", id="petal_length", name="petal_length">
+        <br>
+        <label for="petal_width">Petal Width(cm)</label>
+        <input type="text", id="petal_width", name="petal_width">
+        <br>
+        <input type="submit" value="Predict">
+    </form>
+
+    <h3>The Iris belongs to the {{prediction}} species</h3>
 </body>
 </html>
