--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,22 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background: #15121d;
-    color: #FFFFFF;
+    color: #962020;
+}
+
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+span #predict{
+    color:#c78d10;
 }
 
 label {
