--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
             <input type="submit" value="Predict" class="btn">
         </form>
 
-        <h3>The Iris belongs to the <span id="predict">{{prediction}}</span> species</h3>
+        <h3><span id="predict">{{prediction}}{{error}}</span></h3>
 
         <h5>created by Bamilosin Daniel</h5>
         <h6>&copy;2023 BAMS</h6>
