--- a/templates/index.html
+++ b/templates/index.html
@@ -31,8 +31,7 @@
             <input type="submit" value="Predict" class="btn">
         </form>
 
-        <h3 id="predict">{{prediction}}</h3>
-        <h3 id="error">{{error_message}}</h3>
+        <h3 id="predict">{{prediction}} <span id="error">{{error_message}}</span></h3>
 
         <h5>created by Bamilosin Daniel</h5>
         <h6>&copy;2023 BAMS</h6>
