--- a/static/styles.css
+++ b/static/styles.css
@@ -1,24 +1,37 @@
+/* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&display=swap');
+
+
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: 'Playfair Display', serif;
+    color: rgb(255, 255, 255);
 }
 
 body {
-    padding: 45px;
-    background: #190019;
+    background: #0B1215;
     color: #FBE4D8;
 }
 
+h1 {
+    font-weight: 800;
+    margin-top: 5px;
+}
+
 h3{
+    font-weight: 400;
     text-align: center;
-    padding: 25px;
+    padding: 60px 45px 60px 45px;
 }
-h5{
-    font-weight:lighter;
-    margin-bottom: 5px;
+
+img {
+    width: 250px;
+    border: 1px solid #171717;
+    margin-top: 60px;
 }
+
 
 .container{
     display: flex;
@@ -27,26 +40,29 @@ h5{
     justify-content: center;
 }
 
-#predict{
-    color:#FBE4D8;
-}
-
-#error {
-    color: red;
+form {
+    background-color: #171717;
+    border-radius: 15px;
+    width: 75%;
+    padding: 35px;
 }
 
 label {
     font-size: 14px;
+    font-weight: 400;
+    
 }
 
+
 input{
-    width: 90vw;
-    height: 6vh;
-    margin-bottom: 10px;
-    border: 5px;
-    border-color: #2B124C;
+    width: 100%;
+    height: 30px;
+    margin-bottom: 15px;
+    border: 1px solid #0B1215;
     border-radius: 2.5px;
 }
+
+
 
 .btn{
     margin-top: 10px;
@@ -57,4 +73,33 @@ input{
 
 .btn:hover{
     cursor: pointer;
+    background-color: #fbe4d8c9;
+    color: #190019;
+}
+
+.btn {
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+
+
+#predict{
+    color:#FBE4D8;
+}
+
+#error {
+    color: red;
+}
+
+
+footer {
+    width: 100%;
+    height: 250px;
+    background-color: #171717;
+    text-align: center;
+}
+
+footer h5{
+    font-weight: 400;
+    margin-bottom: 5px;
 }
