--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="/img/iris_info.jpeg" alt="The picture of an iris plant with the label of its petals and sepals">
+        <img src="/static/img/iris_info.jpeg" alt="The picture of an iris plant with the label of its petals and sepals">
 
         <h1>* IRIS PROPHET *</h1>
         <h3>This ML model predicts what species an Iris plant is, based on the parameters below</h3>
