--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Predicts what species an Iris plant is, based on the length and width of its sepals and petals. Powered my Machine Learning.">
+    <meta name="author" content="Bamilosin Daniel Eniola">
+    <meta name="keywords" content="Iris, Bamilosin, Iris plant, sepal, petal">
+    <meta name="revised" content="Bamilosin, 26th December 2023, 4AM">
+    
     <link rel="stylesheet" href="{{url_for('static', path='/styles.css')}}">
     <link rel="stylesheet" href="/static/styles.css">
     <title>Iris Prophet</title>
