--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Predicts what species an Iris plant is, based on the length and width of its sepals and petals. Powered my Machine Learning.">
+    
     <meta name="author" content="Bamilosin Daniel Eniola">
     <meta name="keywords" content="Iris, Bamilosin, Iris plant, sepal, petal">
     <meta name="revised" content="Bamilosin, 26th December 2023, 4AM">
-    
+
+    <meta name="description" content="Predicts what species an Iris plant is, based on the length and width of its sepals and petals. Powered my Machine Learning.">
+    <meta property="og:title" content="IRIS PROPHET">
+    <meta property="og:description" content="Predicts what species an Iris plant is">
+    <meta property="og:url" content="https://irisprophet.up.railway.app/predict">
+    <meta property="og:image" content="https://drive.google.com/file/d/1ybU9Eju5qvHG656w9iEOGRL6sxiv5a5i/view?usp=sharing">
+    <meta property="og:image:alt" content="An iris flower with the sepals and petals labelled. Jesus loves you &lt;3" >
+
+
+
     <link rel="stylesheet" href="{{url_for('static', path='/styles.css')}}">
     <link rel="stylesheet" href="/static/styles.css">
     <title>Iris Prophet</title>
