--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,10 @@
     <meta name="author" content="Bamilosin Daniel Eniola">
     <meta name="keywords" content="Iris, Bamilosin, Iris plant, sepal, petal">
     <meta name="revised" content="Bamilosin, 26th December 2023, 4AM">
-
-    <meta name="description" content="Predicts what species an Iris plant is, based on the length and width of its sepals and petals. Powered my Machine Learning.">
     <meta property="og:title" content="IRIS PROPHET">
-    <meta property="og:description" content="Predicts what species an Iris plant is">
+    <meta property="og:description" content="Iris identity crisis? Solved! This AI whisperer speaks the language of petals, revealing your flower's true name.">
     <meta property="og:url" content="https://irisprophet.up.railway.app/predict">
-    <meta property="og:image" content="https://drive.google.com/file/d/1ybU9Eju5qvHG656w9iEOGRL6sxiv5a5i/view?usp=sharing">
+    <meta property="og:image" content="https://ars.els-cdn.com/content/image/3-s2.0-B9780128147610000034-f03-01-9780128147610.jpg">
     <meta property="og:image:alt" content="An iris flower with the sepals and petals labelled. Jesus loves you &lt;3" >
 
 
