--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Iris identity crisis? Solved! This AI whisperer speaks the language of petals, revealing your flower's true name.">
     
     <meta name="author" content="Bamilosin Daniel Eniola">
     <meta name="keywords" content="Iris, Bamilosin, Iris plant, sepal, petal">
@@ -13,6 +14,10 @@
     <meta property="og:image" content="https://ars.els-cdn.com/content/image/3-s2.0-B9780128147610000034-f03-01-9780128147610.jpg">
     <meta property="og:image:alt" content="An iris flower with the sepals and petals labelled. Jesus loves you &lt;3" >
 
+    <!-- twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="https://ars.els-cdn.com/content/image/3-s2.0-B9780128147610000034-f03-01-9780128147610.jpg">
+    <meta name="twitter:title" content="IRIS PROPHET">
 
 
     <link rel="stylesheet" href="{{url_for('static', path='/styles.css')}}">
