--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="https://ars.els-cdn.com/content/image/3-s2.0-B9780128147610000034-f03-01-9780128147610.jpg">
     <meta name="twitter:title" content="IRIS PROPHET">
+    <meta property="twitter:description" content="Iris identity crisis? Solved! This AI whisperer speaks the language of petals, revealing your flower's true name.">
+    
 
 
     <link rel="stylesheet" href="{{url_for('static', path='/styles.css')}}">
