--- a/static/styles.css
+++ b/static/styles.css
@@ -61,6 +61,7 @@ input{
     border: 1px solid #0B1215;
     border-radius: 2.5px;
     color: #0B1215;
+    padding-left: 5px;
 }
 
 input:focus-within{
